# Market

./: pyproject.toml
migrations/versions/: 59830dd2e470_cat.py  9d5d20e57c12_product.py  afb8e3ecf776_product.py  b453e4de0bb1_initial.py  e78757cc0d39_dt_t.py  f98b091c1fe5_cat2.py
src/: database.py  main.py
src/admin/: router.py
src/auth/: Manager.py  config.py  models.py  schemas.py
src/technic/: router.py  schemas.py
